@@ -1,5 +1,8 @@
 Date	Added
 
+2006/10/19
+	* Commented out the monster_noteleport mapflag from the guild castles as
+	  this is the Aegis behaviour [Skotlex]
 2006/10/18
 	* Added monster_noteleport mapflag to the guild castle maps to prevent
 	  "avoiding MVPs" by forcing them to teleport from rude-attacks. [Skotlex]
